apps/production/client-sites/jenny-florez/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenny-florez
  namespace: lulo-demo-landings
  labels:
    app: jenny-florez
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenny-florez
  template:
    metadata:
      labels:
        app: jenny-florez
        name: jenny-florez
    spec:
      containers:
      - name: jenny-florez
        image: "registry.yesidlopez.de/jenny-florez:v1.0.1" # {"$imagepolicy": "lulo-demo-landings:jenny-florez"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
