apps/production/client-sites/jenny-florez/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenny-florez
  name: jenny-florez
  namespace: lulo-demo-landings
spec:
  selector:
    app: jenny-florez
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
